--- a/FolhaPonto/templates/style.css
+++ b/FolhaPonto/templates/style.css
@@ -1,9 +1,17 @@
 body {
-    text-align: center;
+    
     background: #CCCCCC
 
+}
+#banner {
+    width: 100%;
+}
+h1{
+    text-align: center;
+}
+h2{
+    text-align: center;
 }
 table {
     text-align: left;
 }
-
