--- a/FolhaPonto/templates/FrontPage.html
+++ b/FolhaPonto/templates/FrontPage.html
@@ -4,34 +4,63 @@
         <link rel="stylesheet" href="http://code.jquery.com/ui/1.9.0/themes/base/jquery-ui.css" />
         <script src="http://code.jquery.com/jquery-1.8.2.js"></script>
         <script src="http://code.jquery.com/ui/1.9.0/jquery-ui.js"></script>
-        <script>
-            $(function() {
-                $( "#calendario" ).datepicker({dateFormat: 'yy-mm-dd',
-                                                changeMonth: true,
-                                                changeYear: true});
-            });
-        </script>
+
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>FOLHA-PONTO</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <img id="banner" src="temposmodernos.jpg">
-        <h1>Folha Ponto</h1>
+        <img id="banner" src="images/temposmodernos.jpg">
         <div class="container">
             <div class="page-header">
-                <p>Nome do arquivo csv: <input type="text" id="csvfile" size="15"/>.csv</p>
+                <h1>{{ titulo }}</h1>
             </div>
+                <form action="{{ url_for('get_config') }}" method="post" >
+                    <fieldset>
+                        <div class="form-group">
+                            <label>minutos de tolerancia :</label>
+                            <input type="number" name="tolerancia" id="tolerancia" class="form-control" value="15">
+                        </div>
+                        <div class="form-group">
+                            <label>horas por dia : </label>
+                            <input type="number" name="horas-dia" id="horas-dia" class="form-control" value="8">
+                        </div>
+                        <div class="form-group">
+                            <label>horas extras por dia : </label>
+                            <input type="number" name="horas-extras" id="horas-extras" class="form-control" value="0">
+                        </div>
+                        <div class="form-group">
+                            <label>Data de início do periodo : </label>
+                            <input type="date" name="calendario-inicio" id="calendario-inicio" class="form-control">
+                        </div>
+                        <div class="form-group">
+                            <label>Data de término do periodo : </label>
+                            <input type="date" name="calendario-fim" id="calendario-fim" class="form-control">
+                        </div>
+                        <button type="submit" class="btn btn-primary btn-salvar">Salvar</button>
+                    </fieldset>
+                </form>
+            </div>
+            <div>
             <table class="table table-striped table-responsive table-bordered">
                 <thead class="thead-default">
+                <th>Data</th>
+                <th>Entrada</th>
+                <th>Saida Almoço</th>
+                <th>Volta Almoço</th>
+                <th>Saida</th>
+                <th>Entrada Extra</th>
+                <th>Saida Extra</th>
                 </thead>
                 <tbody>
                     <tr>
-                        <p>Data de inicio do periodo: <input type="text" id="calendario" /></p>
+                        <td></td>
                     </tr>
                 </tbody>
+
             </table>
+            </div>
         </div>
     </body>
 </html>
