--- a/FolhaPonto/templates/FrontPage.html
+++ b/FolhaPonto/templates/FrontPage.html
@@ -1,34 +1,42 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/html">
     <head>
-        <link rel="stylesheet" href="http://code.jquery.com/ui/1.9.0/themes/base/jquery-ui.css" />
-        <script src="http://code.jquery.com/jquery-1.8.2.js"></script>
-        <script src="http://code.jquery.com/ui/1.9.0/jquery-ui.js"></script>
-
+        <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap.css') }}">
+        <link rel="stylesheet" href="{{ url_for('static', filename='app.css') }}">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>FOLHA-PONTO</title>
-        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <img id="banner" src="images/temposmodernos.jpg">
-        <div class="container">
+        <div class="container" >
             <div class="page-header">
                 <h1>{{ titulo }}</h1>
             </div>
-                <form action="{{ url_for('get_config') }}" method="post" >
+                <form action="{{ url_for('generate_hours_table') }}" method="post" >
                     <fieldset>
                         <div class="form-group">
                             <label>minutos de tolerancia :</label>
                             <input type="number" name="tolerancia" id="tolerancia" class="form-control" value="15">
                         </div>
                         <div class="form-group">
-                            <label>horas por dia : </label>
-                            <input type="number" name="horas-dia" id="horas-dia" class="form-control" value="8">
+                            <label>Incluir Sabados? : </label>
+                            <input type="checkbox" name="sabados" id="sabados" class="form-control">
                         </div>
                         <div class="form-group">
-                            <label>horas extras por dia : </label>
-                            <input type="number" name="horas-extras" id="horas-extras" class="form-control" value="0">
+                            <label>Horario de início do expediente : </label>
+                            <input type="time" name="inicio-expediente" id="inicio-expediente" class="form-control" value="09:00">
+                        </div>
+                        <div class="form-group">
+                            <label>Horario de início do almoço : </label>
+                            <input type="time" name="inicio-almoco" id="inicio-almoco" class="form-control" value="12:00">
+                        </div>
+                        <div class="form-group">
+                            <label>Horario de termino do almoço : </label>
+                            <input type="time" name="termino-almoco" id="termino-almoco" class="form-control" value="13:00">
+                        </div>
+                        <div class="form-group">
+                            <label>Horario de termino do expediente : </label>
+                            <input type="time" name="termino-expediente" id="termino-expediente" class="form-control" value="18:00">
                         </div>
                         <div class="form-group">
                             <label>Data de início do periodo : </label>
@@ -37,30 +45,14 @@
                         <div class="form-group">
                             <label>Data de término do periodo : </label>
                             <input type="date" name="calendario-fim" id="calendario-fim" class="form-control">
+                            (se não selecionada, a data será calculada)
                         </div>
-                        <button type="submit" class="btn btn-primary btn-salvar">Salvar</button>
+                        <button type="submit" class="btn btn-primary btn-salvar">Calcular Horarios</button>
                     </fieldset>
                 </form>
             </div>
             <div>
-            <table class="table table-striped table-responsive table-bordered">
-                <thead class="thead-default">
-                <th>Data</th>
-                <th>Entrada</th>
-                <th>Saida Almoço</th>
-                <th>Volta Almoço</th>
-                <th>Saida</th>
-                <th>Entrada Extra</th>
-                <th>Saida Extra</th>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td></td>
-                    </tr>
-                </tbody>
-
-            </table>
-            </div>
+                {% block content %}{% endblock %}
         </div>
     </body>
 </html>
