format date and time2

--- a/app/templates/SchedulesTable.html
+++ b/app/templates/SchedulesTable.html
@@ -12,7 +12,7 @@
             {% for day in list_of_dates %}
             <tr>
                 <td>{{ day.date|date:"d/m/Y" }}</td>
-                <td>{{ day.start_hour|date:"H:i" }}</td>
+                <td>{{ day.start_hour }}</td>
                 <td>{{ day.out_to_lunch }}</td>
                 <td>{{ day.in_from_lunch }}</td>
                 <td>{{ day.stop_hour }}</td>
